assets/css/base.css
/* ... */
main section table tr td {
  border-bottom: 1px solid var(--tertiary-background-color);
}

main section table tbody tr:hover {
    background-color: var(--outline-background-color);
    color: var(--outline-color);
}

main section table th {
    background-color: var(--secondary-background-color);
    white-space: nowrap; 
}

  
/* --------------------------------------------------------- all tables */

table a {
    color: var(--text3-color);
}


/* --------------------------------------------------------- dropdowns */

.dropdown summary {
    list-style: none;
    padding: var(--half-spacing) var(--spacing);
    border-radius: var(--radius);
    white-space: nowrap;
}

.dropdown-content {
    background-color: var(--outline-background-color);
    width: min-content;    
    border: var(--spacing) solid var(--outline-background-color);
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
    overflow-x: hidden;
    position: absolute;
    max-width: 350px;
    max-height: 85%;
    overflow-y: auto;
    z-index: 10000;
    box-shadow: 0px 14px 14px #24242430;
    border-radius: 0 var(--radius) var(--radius) var(--radius);
}

.dropdown summary:hover,
.dropdown[open] summary {
    background-color: var(--outline-background-color);
    color: var(--outline-color);
}

.dropdown[open] summary {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.dropdown code {
    overflow-x: auto;
}

.dropdown-section {
    background: var(--secondary-background-color);
    padding: var(--spacing); 
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
}

.dropdown h3 {
    font-size: 1em;
    background-color: var(--outline-background-color);
    padding: 0 0 var(--spacing); 
    margin: var(--reset-spacing) var(--reset-spacing) 0;
    display: flex;
    justify-content: space-between;
    color: var(--text2-color);
}

.dropdown h4 {
    font-size: 1em;
    padding: var(--spacing) var(--spacing) var(--half-spacing); 
    border-bottom: 1px solid var(--outline-background-color);
    margin: 0 var(--reset-spacing) 0;
} 


/* --------------------------------------------------------- help button */

.help {
    background: var(--outline-color);
    color: var(--outline-background-color) !important;
    border-radius: 100%;
    display: flex;
    width: 1.2em;
    height: 1.2em;
    font-size: var(--size-small);
    justify-content: center;
    align-items: center;
}
  
/* --------------------------------------------------------- topbar */

#search input[type="text"] {
    width: 100px;
}

#topbar a.currentpage,
#topbar a:focus-visible {
    outline: 1px solid rgba(255,255,255, .3);
    padding: calc(var(--spacing) / 4) var(--spacing);
    border-radius: var(--radius);
}

/* --------------------------------------------------------- navbar */

#navbar {
    background-color: var(--secondary-background-color);
}

/* --------------------------------------------------------- toggle panels (collapsibles) */

.toggle-panel-container {
    --toggle-label-width: 1.5em;
    display: flex;
    flex-direction: row-reverse;
    background: var(--primary-background-color);
    /* needed for absolutely positionned labels on mobile */
    position: relative;
}

.toggle-panel {
    display: none;
    background: var(--primary-background-color);
}
.toggle-panel-content {
    padding: var(--spacing);
    overflow-y: auto;
}

.toggle-panel-label {
    height: 100%;
    font-size: 1em;
    width: var(--toggle-label-width);
    cursor: pointer;
    text-align: center;
    cursor: ew-resize;
}

.toggle-panel-label span {
    background-color: var(--main-color);
    color: var(--text2-color);
    padding: var(--spacing) var(--half-spacing);    
    display: block;     
}

.toggle-panel-label:hover {
    background-color: var(--main-color);
}

:checked ~ .toggle-panel {
    display: flex;
    flex-direction: column;
    max-width: min-content;
}

input.toggle-panel-toggle {
    display: none;
}

/* section-subtitle: bookmarks h3, #filters legend, .edit #rightbar h3… */
.toggle-panel-content h3,
.toggle-panel-content legend {
    font-weight: bold;
    width: calc(100% + var(--double-spacing));
    font-size: 1em;
    padding: var(--half-spacing) var(--spacing);
    border-bottom: 1px solid var(--tertiary-background-color);
    margin: 0 0 var(--spacing) var(--reset-spacing);
    display: flex;
    justify-content: space-between;
}

/* --------------------------------------------------------- delete */
/* to be moved in dedicated CSS? */
.confirm-delete {
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
    padding: var(--spacing);
}

/* --------------------------------------------------------- workspace button (no-js) */
#save-workspace {
    position: absolute;
    right: var(--spacing);
}
.js #save-workspace {
    display: none;
}
/* --------------------------------------------------------- media queries */


@media (max-width: 900px) {
    /* anchortext within topbar */
    #topbar a span, 
    /* version footer on home */
    footer {
        display: none;
    }
}


@media (max-width: 700px) {
    .text {display: none;}
}
/* ... */

